--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css">
-
 </head>
 
 <body>
@@ -51,7 +50,7 @@
   <main>
 
     <!-- Product section -->
-    <section class="product_section grid gap-2x">
+    <section class="product_section grid ">
 
       <!-- Product images section-->
       <div class="product_images lg-only">
@@ -66,7 +65,7 @@
         </ul>
         </div>
       </div>
-      <div class="product_images  sm-only">
+      <div class="product_images  sm-device">
         <div class="carousel">
           <button class="carousel_button carousel_button--left is-hidden">
             <span class="sr-only">Back Button</span>
@@ -145,18 +144,15 @@
     <div class="lightbox" data-visible="false"></div>
 
   </main>
-
-
-
-
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Your Name Here</a>.
+    </div>
+    <script src="main.js"></script>
+    <script src="carousel.js"></script>
+  </footer>
 </body>
-<footer>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-  <script src="main.js"></script>
-  <script src="carousel.js"></script>
-</footer>
+
 
 </html>
