fix pictures missing on git up

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
 
   <title>Frontend Mentor | E-commerce product page</title>
 
@@ -40,8 +40,8 @@
     </nav>
     <nav class="flex secondary_navigation">
       <ul role="list" class=" flex ">
-        <li class="cart"><img src="/images/icon-cart.svg" alt="shopping cart"></li>
-        <li class="avatar"><img src="/images/image-avatar.png" alt="user profile picture"></li>
+        <li class="cart"><img src="images/icon-cart.svg" alt="shopping cart"></li>
+        <li class="avatar"><img src="images/image-avatar.png" alt="user profile picture"></li>
       </ul>
     </nav>
 
@@ -57,10 +57,10 @@
         <img src="images/image-product-1.jpg" alt="product primary image">
         <div class="product-image-list-wrapper">
         <ul class="flex ">
-          <li><img src="./images/image-product-1-thumbnail.jpg" alt=""></li>
-          <li><img src="./images/image-product-2-thumbnail.jpg" alt=""></li>
-          <li><img src="./images/image-product-3-thumbnail.jpg" alt=""></li>
-          <li><img src="./images/image-product-4-thumbnail.jpg" alt=""></li>
+          <li><img src="images/image-product-1-thumbnail.jpg" alt=""></li>
+          <li><img src="images/image-product-2-thumbnail.jpg" alt=""></li>
+          <li><img src="images/image-product-3-thumbnail.jpg" alt=""></li>
+          <li><img src="images/image-product-4-thumbnail.jpg" alt=""></li>
          
         </ul>
         </div>
@@ -132,7 +132,7 @@
             </button>
           </div>
           <button class="icon-button ">
-            <img src="/images/icon-cart.svg" alt="add to cart">
+            <img src="images/icon-cart.svg" alt="add to cart">
             <span>Add to cart</span>
           </button>
         </div>
