added javascript for product quantity

--- a/index.html
+++ b/index.html
@@ -122,16 +122,16 @@
         <div class="product_button_wrapper">
           <div class="product_quantity_button flex bg-neutral-100">
 
-            <button class="border-0">
+            <button class="border-0 product_quantity_minus">
               <img src="images/icon-minus.svg" alt="minus">
             </button>
             <label for="product_quantity" class="sr-only">Product Quantity</label>
             <input id="product_quantity" type="text" class=" border-0 bg-neutral-100" value="1" />
-            <button class="border-0">
+            <button class="border-0 product_quantity_plus">
               <img src="images/icon-plus.svg" alt="add">
             </button>
           </div>
-          <button class="icon-button ">
+          <button class="icon-button  ">
             <img src="images/icon-cart.svg" alt="add to cart">
             <span>Add to cart</span>
           </button>
