--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Alain David Lescouflair</a>.
     </div>
     <script src="main.js"></script>
     <script src="carousel.js"></script>
